@@ -1,34 +1,41 @@
 package br.com.cumbuca.service.estabelecimento;
 
 import br.com.cumbuca.dto.Favorito.FavoritoResponseDTO;
+import br.com.cumbuca.dto.estabelecimento.EstabelecimentoFiltroRequestDTO;
 import br.com.cumbuca.dto.estabelecimento.EstabelecimentoRequestDTO;
 import br.com.cumbuca.dto.estabelecimento.EstabelecimentoResponseDTO;
 import br.com.cumbuca.model.Avaliacao;
 import br.com.cumbuca.model.Estabelecimento;
+import br.com.cumbuca.model.EstabelecimentoView;
 import br.com.cumbuca.model.Favorito;
 import br.com.cumbuca.model.Usuario;
 import br.com.cumbuca.repository.AvaliacaoRepository;
 import br.com.cumbuca.repository.EstabelecimentoRepository;
+import br.com.cumbuca.repository.EstabelecimentoViewRepository;
 import br.com.cumbuca.repository.FavoritoRespository;
 import br.com.cumbuca.service.usuario.UsuarioService;
 import org.modelmapper.ModelMapper;
+import org.springframework.data.domain.Example;
+import org.springframework.data.domain.ExampleMatcher;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 @Service
 public class EstabelecimentoServiceImpl implements EstabelecimentoService {
 
     private final EstabelecimentoRepository estabelecimentoRepository;
+    private final EstabelecimentoViewRepository estabelecimentoViewRepository;
     private final AvaliacaoRepository avaliacaoRepository;
     private final FavoritoRespository favoritoRespository;
     private final UsuarioService usuarioService;
     private final ModelMapper modelMapper;
 
-    public EstabelecimentoServiceImpl(EstabelecimentoRepository estabelecimentoRepository, AvaliacaoRepository avaliacaoRepository, FavoritoRespository favoritoRespository, UsuarioService usuarioService, ModelMapper modelMapper) {
+    public EstabelecimentoServiceImpl(EstabelecimentoRepository estabelecimentoRepository, EstabelecimentoViewRepository estabelecimentoViewRepository, AvaliacaoRepository avaliacaoRepository, FavoritoRespository favoritoRespository, UsuarioService usuarioService, ModelMapper modelMapper) {
         this.estabelecimentoRepository = estabelecimentoRepository;
+        this.estabelecimentoViewRepository = estabelecimentoViewRepository;
         this.avaliacaoRepository = avaliacaoRepository;
         this.favoritoRespository = favoritoRespository;
         this.usuarioService = usuarioService;
@@ -45,41 +52,64 @@ public class EstabelecimentoServiceImpl implements EstabelecimentoService {
     }
 
     @Override
-    public List<EstabelecimentoResponseDTO> listar() {
+    public List<EstabelecimentoResponseDTO> listar(EstabelecimentoFiltroRequestDTO filtros, String ordenador) {
         final Usuario usuario = usuarioService.getUsuarioLogado();
-        final List<Estabelecimento> estabelecimentos = estabelecimentoRepository.findAll();
+        final Example<EstabelecimentoView> example = criarExemplo(filtros);
+
+        final List<EstabelecimentoView> estabelecimentos = (ordenador != null && !ordenador.isBlank())
+                ? estabelecimentoViewRepository.findAll(example, Sort.by(Sort.Order.desc(ordenador)))
+                : estabelecimentoViewRepository.findAll(example);
 
         return estabelecimentos.stream().map(estabelecimento -> {
             final List<Avaliacao> avaliacoes = avaliacaoRepository.findByEstabelecimentoId(estabelecimento.getId());
             final EstabelecimentoResponseDTO estabelecimentoResponseDTO = new EstabelecimentoResponseDTO(estabelecimento);
             estabelecimentoResponseDTO.setQtdAvaliacoes(avaliacoes.size());
-            estabelecimentoResponseDTO.setNotaGeral(calculaNotaGeral(avaliacoes));
+            estabelecimentoResponseDTO.setNotaGeral(estabelecimento.getNotaGeral());
             estabelecimentoResponseDTO.setFavoritado(favoritoRespository.existsByUsuarioIdAndEstabelecimentoId(usuario.getId(), estabelecimento.getId()));
             return estabelecimentoResponseDTO;
-        }).collect(Collectors.toList());
+        }).toList();
+    }
+
+    private Example<EstabelecimentoView> criarExemplo(EstabelecimentoFiltroRequestDTO filtros) {
+        final EstabelecimentoView exemplo = new EstabelecimentoView();
+
+        if (filtros.getNome() != null && !filtros.getNome().isBlank()) {
+            exemplo.setNome(filtros.getNome());
+        }
+        if (filtros.getCategoria() != null && !filtros.getCategoria().isBlank()) {
+            exemplo.setCategoria(filtros.getCategoria());
+        }
+        if (filtros.getLocal() != null && !filtros.getLocal().isBlank()) {
+            exemplo.setRua(filtros.getLocal());
+            exemplo.setBairro(filtros.getLocal());
+            exemplo.setCidade(filtros.getLocal());
+            exemplo.setEstado(filtros.getLocal());
+        }
+        if (filtros.getFavoritado() != null) {
+            exemplo.setFavoritado(filtros.getFavoritado());
+        }
+        if (filtros.getNotaGeral() != null) {
+            exemplo.setNotaGeral(filtros.getNotaGeral());
+        }
+
+        final ExampleMatcher matcher = ExampleMatcher.matching()
+                .withIgnoreCase()
+                .withStringMatcher(ExampleMatcher.StringMatcher.CONTAINING);
+
+        return Example.of(exemplo, matcher);
     }
 
     @Override
     public EstabelecimentoResponseDTO recuperar(Long id) {
         final Usuario usuario = usuarioService.getUsuarioLogado();
-        final Estabelecimento estabelecimento = estabelecimentoRepository.findById(id)
+        final EstabelecimentoView estabelecimento = estabelecimentoViewRepository.findById(id)
                 .orElseThrow(() -> new NoSuchElementException("Estabelecimento não encontrado."));
         final List<Avaliacao> avaliacoes = avaliacaoRepository.findByEstabelecimentoId(estabelecimento.getId());
         final EstabelecimentoResponseDTO estabelecimentoResponseDTO = new EstabelecimentoResponseDTO(estabelecimento);
         estabelecimentoResponseDTO.setQtdAvaliacoes(avaliacoes.size());
-        estabelecimentoResponseDTO.setNotaGeral(calculaNotaGeral(avaliacoes));
+        estabelecimentoResponseDTO.setNotaGeral(estabelecimento.getNotaGeral());
         estabelecimentoResponseDTO.setFavoritado(favoritoRespository.existsByUsuarioIdAndEstabelecimentoId(usuario.getId(), estabelecimento.getId()));
         return estabelecimentoResponseDTO;
-    }
-
-    private double calculaNotaGeral(List<Avaliacao> avaliacoes) {
-        if (avaliacoes == null || avaliacoes.isEmpty()) {
-            return 0.0;
-        }
-        return avaliacoes.stream()
-                .mapToDouble(Avaliacao::getNotaGeral)
-                .average()
-                .orElse(0.0);
     }
 
     @Override
@@ -105,5 +135,4 @@ public class EstabelecimentoServiceImpl implements EstabelecimentoService {
         favoritoRespository.save(favorito);
         return favoritoResponseDTO;
     }
-
 }
